--- a/assignment2/app.yaml
+++ b/assignment2/app.yaml
@@ -10,6 +10,6 @@ handlers:
   
 libraries:
 - name: webapp2
-  version: lastest
+  version: 2.5.2
 - name: jinja2
-  version: latest
+  version: 2.9
